--- a/index.html
+++ b/index.html
@@ -2,32 +2,49 @@
 
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav>
       <h1>Sorting Visualizer</h1>
       <div class="innerNav">
         <div class="speedTracker"><span>Array Size</span>---------------</div>
-      <div class="arraySize"><span>Speed</span>---------------</div>
+        <div class="arraySize"><span>Speed</span>---------------</div>
       </div>
     </nav>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" fill="#000"><path d="M0 0v100c166.7 0 166.7-66 333.3-66S500 77 666.7 77 833.3 28 1000 28V0H0Z" opacity=".5"></path><path d="M0 0v100c166.7 0 166.7-66 333.3-66S500 70 666.7 70 833.3 16 1000 16V0H0Z" opacity=".5"></path><path d="M0 0v100c166.7 0 166.7-66 333.3-66S500 63 666.7 63 833.3 4 1000 4V0H0Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" fill="#000">
+      <path
+        d="M0 0v100c166.7 0 166.7-66 333.3-66S500 77 666.7 77 833.3 28 1000 28V0H0Z"
+        opacity=".5"
+      ></path>
+      <path
+        d="M0 0v100c166.7 0 166.7-66 333.3-66S500 70 666.7 70 833.3 16 1000 16V0H0Z"
+        opacity=".5"
+      ></path>
+      <path
+        d="M0 0v100c166.7 0 166.7-66 333.3-66S500 63 666.7 63 833.3 4 1000 4V0H0Z"
+      ></path>
+    </svg>
     <div class="sideBar">
       <ul>
         <li class="active algorithm">Selection Sort</li>
         <li class="algorithm">Bubble Sort</li>
         <li class="algorithm">Quick Sort</li>
         <li class="algorithm">Merge Sort</li>
-        <li id="play">Play</li>
       </ul>
-      </div>
     </div>
-    <script src="app.js" async defer></script>
+    <div class="barContainer">
+      <div id="1" class="bar"><span>60%</span></div>
+      <div id="2" class="bar"><span>60%</span></div>
+      <div id="3" class="bar"><span>60%</span></div>
+      <div id="4" class="bar"><span>60%</span></div>
+      <div id="5" class="bar"><span>60%</span></div>
+    </div>
+    <script type="module" src="app.js" async defer></script>
   </body>
 </html>
