--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
       <h1>Sorting Visualizer</h1>
       <div class="innerNav">
         <div class="speedTracker"><span>Array Size</span>---------------</div>
-        <div class="arraySize"><span>Speed</span>---------------</div>
+        <div class="arraySize">
+          <label>Array Size: </label>
+          <select name="arraySize" id="arraySize">
+            <option value="5">5</option>
+            <option value="10">10</option>
+          </select>
+        </div>
       </div>
     </nav>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" fill="#000">
@@ -38,13 +44,19 @@
         <li class="algorithm">Merge Sort</li>
       </ul>
     </div>
-    <div class="barContainer">
-      <div id="1" class="bar"><span>60%</span></div>
-      <div id="2" class="bar"><span>60%</span></div>
-      <div id="3" class="bar"><span>60%</span></div>
-      <div id="4" class="bar"><span>60%</span></div>
-      <div id="5" class="bar"><span>60%</span></div>
+    <div class="btnContainer">
+      <button id="play">Play</button>
+      <button id="pause">Pause</button>
     </div>
+    <div class="barContainer">
+      <div class="bar"><span>60%</span></div>
+      <div class="bar"><span>60%</span></div>
+      <div class="bar"><span>60%</span></div>
+      <div class="bar"><span>60%</span></div>
+      <div class="bar"><span>60%</span></div>
+    </div>
+    <div class="footer"></div>
     <script type="module" src="app.js" async defer></script>
+    <script type="module" src="sorting.js" async defer></script>
   </body>
 </html>
