adjust bars finished

--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
     <nav>
       <h1>Algorithm Visualizer</h1>
       <div class="innerNav">
-        <div class="speedTracker"><span>Array Size</span>---------------</div>
         <div class="range">
           <div class="field">
-            <div class="value left">0</div>
-            <input type="range" min="0" max="10" value="5" steps="1">
+            <div class="value left">1</div>
+            <input class="rangeInput" type="range" min="1" max="2" value="1" steps="1">
+            <div class="value right">2</div>
+        <div class="range">
+          <div class="field">
+            <div class="value left">1</div>
+            <input class="rangeInput" type="range" min="1" max="10" value="1" steps="1">
             <div class="value right">10</div>
           </div>
-          <div class="sliderValue">
-            <span>5</span>
-          </div>
+          <div class="slider"><div class="sliderValue">1</div></div>
         </div>
     </nav>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" fill="#000">
