selection sort and bubble sort visualization

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="range">
           <div class="field">
             <div class="value left">1</div>
-            <input class="rangeInput" type="range" min="1" max="2" value="1" steps="1">
+            <input id="speed" class="rangeInput" type="range" min="1" max="2" value="1" steps="1">
             <div class="value right">2</div>
         <div class="range">
           <div class="field">
@@ -43,7 +43,7 @@
     <div class="sideBar">
       <ul>
         <li class="active algorithm">Selection Sort</li>
-        <li class="algorithm">Bubble Sort</li>
+        <li class="algorithm" >Bubble Sort</li>
         <li class="algorithm">Quick Sort</li>
         <li class="algorithm">Merge Sort</li>
       </ul>
