--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       <div class="innerNav">
         <div class="range">
           <div class="field">
-            <div class="value left">1</div>
-            <input id="speed" class="rangeInput" type="range" min="1" max="2" value="1" steps="1">
-            <div class="value right">2</div>
+            <div class="value left">1x</div>
+            <input id="speed" class="rangeInput" type="range" min="1" max="4" value="1" steps="1">
+            <div class="value right">4x</div>
         <div class="range">
           <div class="field">
             <div class="value left">1</div>
-            <input class="rangeInput" type="range" min="1" max="10" value="1" steps="1">
-            <div class="value right">10</div>
+            <input class="rangeInput" type="range" min="1" max="30" value="1" steps="1">
+            <div class="value right">30</div>
           </div>
-          <div class="slider"><div class="sliderValue">1</div></div>
+          <div class="sliderRange"><div class="slider"><div class="sliderValue">1</div></div></div>
         </div>
     </nav>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" fill="#000">
@@ -51,6 +51,7 @@
     <div class="btnContainer">
       <button id="play">Play</button>
       <button id="pause">Pause</button>
+      <button id="stop">Stop</button>
     </div>
     <div class="barContainer">
     </div>
