--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <li class="algorithm">Merge Sort</li>
       </ul>
     </div>
+    <div class="timer"><span id="min">00</span><span>:</span><span id="sec">00</span></div>
     <div class="btnContainer">
       <button id="play">Play</button>
       <button id="pause">Pause</button>
@@ -57,6 +58,6 @@
     </div>
     <div class="footer"></div>
     <script type="module" src="app.js" async defer></script>
-    <script type="module" src="sorting.js" async defer></script>
+    <script type="module" src="helpers.js" async defer></script>
   </body>
 </html>
