still need to finish implementation of visualized merge sort

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <button id="pause">Pause</button>
       <button id="stop">Stop</button>
     </div>
-    <div class="barContainer">
-    </div>
+    <div class="barContainer"></div>
+    <div class="mergeSortContainer"></div>
     <div class="footer"></div>
     <script type="module" src="app.js" async defer></script>
     <script type="module" src="helpers.js" async defer></script>
